# dtos/users/requests/login_user_request_dto.go
@@ -1,0 +1,6 @@
+package requests
+
+type LoginUserRequestDto struct {
+    Email    string `json:"email" validate:"required,email"`
+    Password string `json:"password" validate:"required"`
+}
