# dtos/users/responses/login_user_response_dto.go
@@ -1,0 +1,5 @@
+package responses
+
+type LoginUserResponseDto struct {
+    AccessToken string `json:"accessToken"`
+}
